--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -5,90 +5,97 @@
 /* CSS Custom Properties
 /*-----------------------------------------------------------------------------------*/
 :root {
-  --color-primary-basis: #002F6C;
-  --color-primary-heller: #8fb1ef;
-  --color-primary-hellste: #dde5f0;
-  --color-primary-dunkler: #24598f;
-  --color-primary-dunkler-kontrast: #fff;
-  --color-primary-dunkelste: #1f4b7a;
+  --color-primary-basis: #005287;
   --color-primary-basis-kontrast: #fff;
-  --color-primary-ci-hell: #002f6c;
-  --color-primary-ci-hell-kontrast: #fff;
-  --color-primary-ci-hell2: #B7D5FA;
-  --color-primary-ci-hell2-kontrast: #333;
-  --color-zentral-basis: #002F6C;
+  --color-primary-heller: #bfd6f5;
+  --color-primary-hellste: #eaf3fc;
+  --color-primary-dunkler: #005287;
+  --color-primary-dunkler-kontrast: #fff;
+  --color-primary-dunkelste: #003E61;
+  --color-primary-dunkelste-kontrast: #fff;
+  --color-primary-ci-hell: #18B4F1;
+  --color-primary-ci-hell-kontrast: #000;
+  --color-primary-ci-hell2: #B9D9EC;
+  --color-primary-ci-hell2-kontrast: #000;
+  --color-zentral-basis: #04316A;
+  --color-zentral-basis-kontrast: #fff;
   --color-zentral-heller: #8fb1ef;
   --color-zentral-hellste: #dde5f0;
-  --color-zentral-dunkler: #24598f;
+  --color-zentral-dunkler: #004A9F;
   --color-zentral-dunkler-kontrast: #fff;
-  --color-zentral-dunkelste: #1f4b7a;
-  --color-zentral-basis-kontrast: #fff;
-  --color-zentral-ci-hell: #002f6c;
+  --color-zentral-dunkelste: #041E42;
+  --color-zentral-dunkelste-kontrast: #fff;
+  --color-zentral-ci-hell: #04316A;
   --color-zentral-ci-hell-kontrast: #fff;
-  --color-zentral-ci-hell2: #B7D5FA;
-  --color-zentral-ci-hell2-kontrast: #333;
-  --color-phil-basis: #A36B0D;
+  --color-zentral-ci-hell2: #CED9E7;
+  --color-zentral-ci-hell2-kontrast: #000;
+  --color-phil-basis: #963B2F;
+  --color-phil-basis-kontrast: #fff;
   --color-phil-heller: #d9c689;
   --color-phil-hellste: #f3eedf;
-  --color-phil-dunkler: #805000;
-  --color-phil-dunkler-kontrast: #fff;
-  --color-phil-dunkelste: #553500;
-  --color-phil-basis-kontrast: #fff;
-  --color-phil-ci-hell: #ffb81c;
+  --color-phil-dunkler: #E46D41;
+  --color-phil-dunkler-kontrast: #000;
+  --color-phil-dunkelste: #963B2F;
+  --color-phil-dunkelste-kontrast: #fff;
+  --color-phil-ci-hell: #FDB735;
   --color-phil-ci-hell-kontrast: #000;
-  --color-phil-ci-hell2: #fbedcd;
-  --color-phil-ci-hell2-kontrast: #333;
-  --color-med-basis: #0381A2;
+  --color-phil-ci-hell2: #F4E8CB;
+  --color-phil-ci-hell2-kontrast: #000;
+  --color-med-basis: #005287;
+  --color-med-basis-kontrast: #fff;
   --color-med-heller: #bfd6f5;
   --color-med-hellste: #eaf3fc;
-  --color-med-dunkler: #026480;
+  --color-med-dunkler: #005287;
   --color-med-dunkler-kontrast: #fff;
-  --color-med-dunkelste: #014e63;
-  --color-med-basis-kontrast: #fff;
-  --color-med-ci-hell: #0bb6f7;
+  --color-med-dunkelste: #003E61;
+  --color-med-dunkelste-kontrast: #fff;
+  --color-med-ci-hell: #18B4F1;
   --color-med-ci-hell-kontrast: #000;
-  --color-med-ci-hell2: #C8EFFE;
-  --color-med-ci-hell2-kontrast: #333;
-  --color-nat-basis: #048767;
+  --color-med-ci-hell2: #B9D9EC;
+  --color-med-ci-hell2-kontrast: #000;
+  --color-nat-basis: #266141;
+  --color-nat-basis-kontrast: #fff;
   --color-nat-heller: #aacfbd;
   --color-nat-hellste: #e5efea;
-  --color-nat-dunkler: #006e53;
+  --color-nat-dunkler: #266141;
   --color-nat-dunkler-kontrast: #fff;
-  --color-nat-dunkelste: #00533f;
-  --color-nat-basis-kontrast: #fff;
-  --color-nat-ci-hell: #43b02a;
+  --color-nat-dunkelste: #14462D;
+  --color-nat-dunkelste-kontrast: #fff;
+  --color-nat-ci-hell: #65AB0F;
   --color-nat-ci-hell-kontrast: #000;
-  --color-nat-ci-hell2: #CFF1C3;
-  --color-nat-ci-hell2-kontrast: #333;
-  --color-rw-basis: #8d1429;
+  --color-nat-ci-hell2: #CFE0D8;
+  --color-nat-ci-hell2-kontrast: #000;
+  --color-rw-basis: #971B2F;
+  --color-rw-basis-kontrast: #fff;
   --color-rw-heller: #c5ac94;
   --color-rw-hellste: #ede7de;
-  --color-rw-dunkler: #690013;
+  --color-rw-dunkler: #971B2F;
   --color-rw-dunkler-kontrast: #fff;
-  --color-rw-dunkelste: #42000c;
-  --color-rw-basis-kontrast: #fff;
-  --color-rw-ci-hell: #971b2f;
+  --color-rw-dunkelste: #662938;
+  --color-rw-dunkelste-kontrast: #fff;
+  --color-rw-ci-hell: #C50F3C;
   --color-rw-ci-hell-kontrast: #fff;
-  --color-rw-ci-hell2: #f2eae9;
-  --color-rw-ci-hell2-kontrast: #333;
-  --color-tf-basis: #4D5B65;
+  --color-rw-ci-hell2: #ECD6C5;
+  --color-rw-ci-hell2-kontrast: #000;
+  --color-tf-basis: #2F586E;
+  --color-tf-basis-kontrast: #fff;
   --color-tf-heller: #d2d5d7;
   --color-tf-hellste: #ebecee;
-  --color-tf-dunkler: #53606b;
+  --color-tf-dunkler: #2F586E;
   --color-tf-dunkler-kontrast: #fff;
-  --color-tf-dunkelste: #3b4956;
-  --color-tf-basis-kontrast: #fff;
-  --color-tf-ci-hell: #779fb5;
+  --color-tf-dunkelste: #204251;
+  --color-tf-dunkelste-kontrast: #fff;
+  --color-tf-ci-hell: #8C9FB1;
   --color-tf-ci-hell-kontrast: #000;
-  --color-tf-ci-hell2: #E2E7EB;
-  --color-tf-ci-hell2-kontrast: #333;
+  --color-tf-ci-hell2: #D3DDE6;
+  --color-tf-ci-hell2-kontrast: #000;
   --color-Text: #444;
   --color-TextLight: #797676;
   --color-MetaTextDefault: #444;
   --color-Notice: #a71c18;
   --color-Alert: #c5ac94;
-  --color-ZUV: #002F6C;
-  --color-Default: #002F6C;
+  --color-ZUV: #04316A;
+  --color-Default: #04316A;
   --color-MainBackground: #fff;
   --color-StandardHellgrau: #e9edf2;
   --color-ContentBorders: #dfe6ec;
@@ -99,46 +106,47 @@
   --color-KontrastHell: #fff;
   --color-KontrastDunkel: #333;
   /* Calculated Values */
-  --color-primary-basis-lighten15: #002f6c;
+  --color-primary-basis-lighten15: #18B4F1;
   --color-MetaHomeBackground: #d4d4d4;
-  --color-MetaHover: #20497f;
+  --color-MetaHover: #264c7b;
   --color-MetaText: #fff;
-  --color-MetaTextDefault: #444;
-  --color-MetaBackgroundLight: #ecf0f4;
-  --color-FAU: #002F6C;
+  --color-MetaBackgroundLight: #eff1f4;
+  --color-FAU: #04316A;
   --color-content-headlines: #444;
-  --color-links: #002F6C;
-  --color-content-links: #444;
-  --color-content-links-underline: #002F6C;
+  --color-links: #005287;
+  --color-content-links: #005287;
+  --color-content-links-underline: #005287;
   --color-content-links-hover: #fff;
-  --color-footer-bg: #002f6c;
-  --color-footer-text: #fff;
-  --color-hero-bg: #002f6c;
-  --color-hero-text: #fff;
+  --color-footer-bg: #18B4F1;
+  --color-footer-text: #000;
+  --color-hero-bg: #18B4F1;
+  --color-hero-text: #000;
   --color-mainmenu-toplevel-bg: #fff;
   --color-mainmenu-toplevel-text: #444;
-  --color-mainmenu-toplevel-hover-text: #fff;
-  --color-mainmenu-toplevel-hover-bg: #002f6c;
-  --color-mainmenu-sublevel-bg: #002f6c;
-  --color-mainmenu-sublevel-text: #fff;
+  --color-mainmenu-toplevel-hover-text: #000;
+  --color-mainmenu-toplevel-hover-bg: #18B4F1;
+  --color-mainmenu-sublevel-bg: #18B4F1;
+  --color-mainmenu-sublevel-text: #000;
   --color-mainmenu-sublevel-hover-text: #fff;
-  --color-mainmenu-sublevel-hover-bg: #24598f;
+  --color-mainmenu-sublevel-hover-bg: #005287;
   --color-mainmenu-sublevel-button-text: #fff;
-  --color-mainmenu-sublevel-button-bg: #24598f;
+  --color-mainmenu-sublevel-button-bg: #005287;
   --color-mainmenu-sublevel-button-hover-text: #fff;
-  --color-mainmenu-sublevel-button-hover-bg: #1f4b7a;
+  --color-mainmenu-sublevel-button-hover-bg: #003E61;
   --color-submenu-toplevel-bg: #fff;
   --color-submenu-toplevel-text: #444;
-  --color-submenu-toplevel-hover-text: #fff;
-  --color-submenu-toplevel-hover-bg: #002f6c;
-  --color-submenu-active-bg: #002f6c;
-  --color-submenu-active-text: #fff;
+  --color-submenu-toplevel-hover-text: #000;
+  --color-submenu-toplevel-hover-bg: #18B4F1;
+  --color-submenu-active-bg: #18B4F1;
+  --color-submenu-active-text: #000;
   --color-submenu-hover-text: #fff;
-  --color-submenu-hover-bg: #24598f;
-  --color-submenu-currentlevel-text: #333;
-  --color-submenu-currentlevel-bg: #B7D5FA;
-  --color-submenu-sublevel-text: #fff;
-  --color-submenu-sublevel-bg: #002f6c;
+  --color-submenu-hover-bg: #005287;
+  --color-submenu-currentlevel-text: #000;
+  --color-submenu-currentlevel-bg: #B9D9EC;
+  --color-submenu-sublevel-text: #000;
+  --color-submenu-sublevel-bg: #18B4F1;
+  --color-submenu-currentpage-bg: #003E61;
+  --color-submenu-currentpage-text: #fff;
 }
 
 /*
@@ -152,11 +160,6 @@ Mixins File for Wordpress Theme FAU
 /*-----------------------------------------------------------------------------------*/
 html {
   font-size: 100%;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 100%;
-  }
 }
 
 /*
