--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -17,7 +17,6 @@
      --color-MetaHomeBackground: #{$colorMetaFAUHomeBackground}; 
      --color-MetaHover: #{$colorMetaHover};
      --color-MetaText: #fff;
-     --color-MetaTextDefault: #{$colorMetaTextDefault};
      --color-MetaBackgroundLight: #{$colorMetaLightest};
      --color-FAU: #{$colorZUV};
      --color-content-headlines: #{$color-content-headlines};
@@ -56,7 +55,8 @@
     --color-submenu-currentlevel-bg: #{$color-submenu-currentlevel-bg};
     --color-submenu-sublevel-text: #{$color-submenu-sublevel-text};
     --color-submenu-sublevel-bg: #{$color-submenu-sublevel-bg};
-     
+    --color-submenu-currentpage-bg: #{$color-submenu-currentpage-bg};
+    --color-submenu-currentpage-text: #{$color-submenu-currentpage-text};
 
 
 }
