--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -192,17 +192,18 @@ Mixins File for Wordpress Theme FAU
     color: var(--color-content-links);
     box-shadow: inset 0 -2px 0 var(--color-content-links-underline);
 //    border-bottom: 1px solid var(--color-content-links-underline);
-    transition: box-shadow 0.3s ease-in-out;
+    transition:    all .3s ease-out; //box-shadow 0.3s ease-in-out;
     text-decoration: none;
     padding: 3px 1px;
-//	    padding-bottom: 3px;
-//	     padding-top: 3px;
 
+ 
+    
     &:focus,
     &:hover {
 	text-decoration: none;
-	color: var(--color-content-links-hover);
-	box-shadow: inset 0 -28px 0  var(--color-content-links-underline);
+	// color: var(--color-content-links-underline);
+	 color: var(--color-content-links-hover);
+	 box-shadow: inset 0 -28px 0  var(--color-content-links-underline);
     }
 }
 
