update farben und dimension logo

--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -5,17 +5,17 @@
 /* CSS Custom Properties
 /*-----------------------------------------------------------------------------------*/
 :root {
-  --color-primary-basis: #005287;
+  --color-primary-basis: #04316A;
   --color-primary-basis-kontrast: #fff;
-  --color-primary-heller: #bfd6f5;
-  --color-primary-hellste: #eaf3fc;
-  --color-primary-dunkler: #005287;
+  --color-primary-heller: #8fb1ef;
+  --color-primary-hellste: #dde5f0;
+  --color-primary-dunkler: #004A9F;
   --color-primary-dunkler-kontrast: #fff;
-  --color-primary-dunkelste: #003E61;
+  --color-primary-dunkelste: #041E42;
   --color-primary-dunkelste-kontrast: #fff;
-  --color-primary-ci-hell: #18B4F1;
-  --color-primary-ci-hell-kontrast: #000;
-  --color-primary-ci-hell2: #B9D9EC;
+  --color-primary-ci-hell: #04316A;
+  --color-primary-ci-hell-kontrast: #fff;
+  --color-primary-ci-hell2: #CED9E7;
   --color-primary-ci-hell2-kontrast: #000;
   --color-zentral-basis: #04316A;
   --color-zentral-basis-kontrast: #fff;
@@ -61,21 +61,21 @@
   --color-nat-dunkler-kontrast: #fff;
   --color-nat-dunkelste: #14462D;
   --color-nat-dunkelste-kontrast: #fff;
-  --color-nat-ci-hell: #65AB0F;
+  --color-nat-ci-hell: #7BB725;
   --color-nat-ci-hell-kontrast: #000;
   --color-nat-ci-hell2: #CFE0D8;
   --color-nat-ci-hell2-kontrast: #000;
   --color-rw-basis: #971B2F;
   --color-rw-basis-kontrast: #fff;
   --color-rw-heller: #c5ac94;
-  --color-rw-hellste: #ede7de;
+  --color-rw-hellste: #F2DED1;
   --color-rw-dunkler: #971B2F;
   --color-rw-dunkler-kontrast: #fff;
   --color-rw-dunkelste: #662938;
   --color-rw-dunkelste-kontrast: #fff;
   --color-rw-ci-hell: #C50F3C;
   --color-rw-ci-hell-kontrast: #fff;
-  --color-rw-ci-hell2: #ECD6C5;
+  --color-rw-ci-hell2: #F2DED1;
   --color-rw-ci-hell2-kontrast: #000;
   --color-tf-basis: #2F586E;
   --color-tf-basis-kontrast: #fff;
@@ -106,46 +106,46 @@
   --color-KontrastHell: #fff;
   --color-KontrastDunkel: #333;
   /* Calculated Values */
-  --color-primary-basis-lighten15: #18B4F1;
+  --color-primary-basis-lighten15: #04316A;
   --color-MetaHomeBackground: #d4d4d4;
   --color-MetaHover: #264c7b;
   --color-MetaText: #fff;
   --color-MetaBackgroundLight: #eff1f4;
   --color-FAU: #04316A;
   --color-content-headlines: #444;
-  --color-links: #005287;
-  --color-content-links: #005287;
-  --color-content-links-underline: #005287;
+  --color-links: #04316A;
+  --color-content-links: #444;
+  --color-content-links-underline: #04316A;
   --color-content-links-hover: #fff;
-  --color-footer-bg: #18B4F1;
-  --color-footer-text: #000;
-  --color-hero-bg: #18B4F1;
-  --color-hero-text: #000;
+  --color-footer-bg: #04316A;
+  --color-footer-text: #fff;
+  --color-hero-bg: #04316A;
+  --color-hero-text: #fff;
   --color-mainmenu-toplevel-bg: #fff;
   --color-mainmenu-toplevel-text: #444;
-  --color-mainmenu-toplevel-hover-text: #000;
-  --color-mainmenu-toplevel-hover-bg: #18B4F1;
-  --color-mainmenu-sublevel-bg: #18B4F1;
-  --color-mainmenu-sublevel-text: #000;
+  --color-mainmenu-toplevel-hover-text: #fff;
+  --color-mainmenu-toplevel-hover-bg: #04316A;
+  --color-mainmenu-sublevel-bg: #04316A;
+  --color-mainmenu-sublevel-text: #fff;
   --color-mainmenu-sublevel-hover-text: #fff;
-  --color-mainmenu-sublevel-hover-bg: #005287;
+  --color-mainmenu-sublevel-hover-bg: #004A9F;
   --color-mainmenu-sublevel-button-text: #fff;
-  --color-mainmenu-sublevel-button-bg: #005287;
+  --color-mainmenu-sublevel-button-bg: #004A9F;
   --color-mainmenu-sublevel-button-hover-text: #fff;
-  --color-mainmenu-sublevel-button-hover-bg: #003E61;
+  --color-mainmenu-sublevel-button-hover-bg: #041E42;
   --color-submenu-toplevel-bg: #fff;
   --color-submenu-toplevel-text: #444;
-  --color-submenu-toplevel-hover-text: #000;
-  --color-submenu-toplevel-hover-bg: #18B4F1;
-  --color-submenu-active-bg: #18B4F1;
-  --color-submenu-active-text: #000;
+  --color-submenu-toplevel-hover-text: #fff;
+  --color-submenu-toplevel-hover-bg: #04316A;
+  --color-submenu-active-bg: #04316A;
+  --color-submenu-active-text: #fff;
   --color-submenu-hover-text: #fff;
-  --color-submenu-hover-bg: #005287;
+  --color-submenu-hover-bg: #004A9F;
   --color-submenu-currentlevel-text: #000;
-  --color-submenu-currentlevel-bg: #B9D9EC;
-  --color-submenu-sublevel-text: #000;
-  --color-submenu-sublevel-bg: #18B4F1;
-  --color-submenu-currentpage-bg: #003E61;
+  --color-submenu-currentlevel-bg: #CED9E7;
+  --color-submenu-sublevel-text: #fff;
+  --color-submenu-sublevel-bg: #04316A;
+  --color-submenu-currentpage-bg: #041E42;
   --color-submenu-currentpage-text: #fff;
 }
 
