--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -6,17 +6,17 @@
 /* CSS Custom Properties
 /*-----------------------------------------------------------------------------------*/
 :root {
-  --color-primary-basis: #005287;
+  --color-primary-basis: #04316A;
   --color-primary-basis-kontrast: #fff;
-  --color-primary-heller: #bfd6f5;
-  --color-primary-hellste: #eaf3fc;
-  --color-primary-dunkler: #005287;
+  --color-primary-heller: #8fb1ef;
+  --color-primary-hellste: #dde5f0;
+  --color-primary-dunkler: #004A9F;
   --color-primary-dunkler-kontrast: #fff;
-  --color-primary-dunkelste: #003E61;
+  --color-primary-dunkelste: #041E42;
   --color-primary-dunkelste-kontrast: #fff;
-  --color-primary-ci-hell: #18B4F1;
-  --color-primary-ci-hell-kontrast: #000;
-  --color-primary-ci-hell2: #B9D9EC;
+  --color-primary-ci-hell: #04316A;
+  --color-primary-ci-hell-kontrast: #fff;
+  --color-primary-ci-hell2: #CED9E7;
   --color-primary-ci-hell2-kontrast: #000;
   --color-zentral-basis: #04316A;
   --color-zentral-basis-kontrast: #fff;
@@ -62,21 +62,21 @@
   --color-nat-dunkler-kontrast: #fff;
   --color-nat-dunkelste: #14462D;
   --color-nat-dunkelste-kontrast: #fff;
-  --color-nat-ci-hell: #65AB0F;
+  --color-nat-ci-hell: #7BB725;
   --color-nat-ci-hell-kontrast: #000;
   --color-nat-ci-hell2: #CFE0D8;
   --color-nat-ci-hell2-kontrast: #000;
   --color-rw-basis: #971B2F;
   --color-rw-basis-kontrast: #fff;
   --color-rw-heller: #c5ac94;
-  --color-rw-hellste: #ede7de;
+  --color-rw-hellste: #F2DED1;
   --color-rw-dunkler: #971B2F;
   --color-rw-dunkler-kontrast: #fff;
   --color-rw-dunkelste: #662938;
   --color-rw-dunkelste-kontrast: #fff;
   --color-rw-ci-hell: #C50F3C;
   --color-rw-ci-hell-kontrast: #fff;
-  --color-rw-ci-hell2: #ECD6C5;
+  --color-rw-ci-hell2: #F2DED1;
   --color-rw-ci-hell2-kontrast: #000;
   --color-tf-basis: #2F586E;
   --color-tf-basis-kontrast: #fff;
@@ -107,46 +107,46 @@
   --color-KontrastHell: #fff;
   --color-KontrastDunkel: #333;
   /* Calculated Values */
-  --color-primary-basis-lighten15: #18B4F1;
+  --color-primary-basis-lighten15: #04316A;
   --color-MetaHomeBackground: #d4d4d4;
   --color-MetaHover: #264c7b;
   --color-MetaText: #fff;
   --color-MetaBackgroundLight: #eff1f4;
   --color-FAU: #04316A;
   --color-content-headlines: #444;
-  --color-links: #005287;
-  --color-content-links: #005287;
-  --color-content-links-underline: #005287;
+  --color-links: #04316A;
+  --color-content-links: #444;
+  --color-content-links-underline: #04316A;
   --color-content-links-hover: #fff;
-  --color-footer-bg: #18B4F1;
-  --color-footer-text: #000;
-  --color-hero-bg: #18B4F1;
-  --color-hero-text: #000;
+  --color-footer-bg: #04316A;
+  --color-footer-text: #fff;
+  --color-hero-bg: #04316A;
+  --color-hero-text: #fff;
   --color-mainmenu-toplevel-bg: #fff;
   --color-mainmenu-toplevel-text: #444;
-  --color-mainmenu-toplevel-hover-text: #000;
-  --color-mainmenu-toplevel-hover-bg: #18B4F1;
-  --color-mainmenu-sublevel-bg: #18B4F1;
-  --color-mainmenu-sublevel-text: #000;
+  --color-mainmenu-toplevel-hover-text: #fff;
+  --color-mainmenu-toplevel-hover-bg: #04316A;
+  --color-mainmenu-sublevel-bg: #04316A;
+  --color-mainmenu-sublevel-text: #fff;
   --color-mainmenu-sublevel-hover-text: #fff;
-  --color-mainmenu-sublevel-hover-bg: #005287;
+  --color-mainmenu-sublevel-hover-bg: #004A9F;
   --color-mainmenu-sublevel-button-text: #fff;
-  --color-mainmenu-sublevel-button-bg: #005287;
+  --color-mainmenu-sublevel-button-bg: #004A9F;
   --color-mainmenu-sublevel-button-hover-text: #fff;
-  --color-mainmenu-sublevel-button-hover-bg: #003E61;
+  --color-mainmenu-sublevel-button-hover-bg: #041E42;
   --color-submenu-toplevel-bg: #fff;
   --color-submenu-toplevel-text: #444;
-  --color-submenu-toplevel-hover-text: #000;
-  --color-submenu-toplevel-hover-bg: #18B4F1;
-  --color-submenu-active-bg: #18B4F1;
-  --color-submenu-active-text: #000;
+  --color-submenu-toplevel-hover-text: #fff;
+  --color-submenu-toplevel-hover-bg: #04316A;
+  --color-submenu-active-bg: #04316A;
+  --color-submenu-active-text: #fff;
   --color-submenu-hover-text: #fff;
-  --color-submenu-hover-bg: #005287;
+  --color-submenu-hover-bg: #004A9F;
   --color-submenu-currentlevel-text: #000;
-  --color-submenu-currentlevel-bg: #B9D9EC;
-  --color-submenu-sublevel-text: #000;
-  --color-submenu-sublevel-bg: #18B4F1;
-  --color-submenu-currentpage-bg: #003E61;
+  --color-submenu-currentlevel-bg: #CED9E7;
+  --color-submenu-sublevel-text: #fff;
+  --color-submenu-sublevel-bg: #04316A;
+  --color-submenu-currentpage-bg: #041E42;
   --color-submenu-currentpage-text: #fff;
 }
 
@@ -4711,6 +4711,8 @@ h3,
 h4,
 h5,
 h6 {
+  margin: 1.5rem 0 1rem 0;
+  font-family: inherit;
   color: var(--color-content-headlines);
   font-weight: bold;
 }
@@ -4728,7 +4730,7 @@ h3.widget-title,
 h4.widget-title,
 h5.widget-title,
 h6.widget-title {
-  padding-top: 0;
+  margin-top: 0;
 }
 
 main h1 a, main h2 a, main h3 a, main h4 a, main h5 a {
@@ -4748,51 +4750,49 @@ h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 1.75rem;
-  line-height: 2.275rem;
+  font-size: 2.312rem;
+  line-height: 3.007rem;
 }
 .sidebar-inline + h1 {
   margin-top: 0;
 }
 .banner-text h1 {
-  font-size: 1.75rem;
-  line-height: 2.625rem;
+  font-size: 2.312rem;
+  line-height: 3.469rem;
 }
 .sidebar-inline h1, .search-sidebar h1, .sidebar-outline h1, .widget h1 {
-  font-size: 1.625rem;
-  line-height: 2.438rem;
+  font-size: 2.187rem;
+  line-height: 3.282rem;
 }
 table h1 {
-  font-size: 1.625rem;
-  line-height: 2.438rem;
+  font-size: 2.187rem;
+  line-height: 3.282rem;
 }
 h1.small {
-  font-size: 1.625rem;
-  line-height: 2.113rem;
+  font-size: 2.187rem;
+  line-height: 2.844rem;
 }
 
 h2 {
-  font-size: 1.625rem;
-  line-height: 2.113rem;
-  margin: 0;
-  padding: 22px 0;
+  font-size: 1.812rem;
+  line-height: 2.357rem;
 }
 .sidebar-outline h2, .widget h2 {
-  padding-bottom: 11px;
+  margin-bottom: 11px;
 }
 .search-sidebar h2 {
-  padding-top: 8px;
+  margin-top: 8px;
 }
 h2.small, h2.subtitle {
-  font-size: 1.5rem;
-  line-height: 2.25rem;
+  font-size: 1.687rem;
+  line-height: 2.532rem;
 }
 h2.subtitle {
-  padding: 0 0 22px 15px;
+  margin: 0 0 22px 15px;
 }
 @media (min-width: 768px) {
   h2.subtitle {
-    padding-left: 0;
+    margin-left: 0;
   }
 }
 h2.menu-header {
@@ -4801,22 +4801,22 @@ h2.menu-header {
   border-top: 1px solid var(--color-primary-hellste);
 }
 .search h2 {
-  padding-top: 4px;
+  margin-top: 4px;
 }
 h2.widget-title, .sidebar-inline h2, .search-sidebar h2, .sidebar-outline h2, .widget h2 {
-  font-size: 1.5rem;
-  line-height: 2.25rem;
+  font-size: 1.687rem;
+  line-height: 2.532rem;
 }
 table h2 {
-  font-size: 1.5rem;
-  line-height: 2.25rem;
+  font-size: 1.687rem;
+  line-height: 2.532rem;
 }
 
 h3 {
   margin: 0;
   padding: 11px 0;
-  font-size: 1.375rem;
-  line-height: 2.063rem;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
 }
 h3.abstract {
   padding: 0 0 22px 0;
@@ -4825,66 +4825,66 @@ h3.abstract {
   font-weight: normal;
 }
 #off-canvas h3 {
-  font-size: 1.25rem;
-  line-height: 1.875rem;
+  font-size: 1.375rem;
+  line-height: 2.063rem;
   border-bottom: 1px solid var(--color-StandardHellgrau);
   margin: 20px 0 0 0;
   padding: 0 10px;
 }
 .sidebar-inline h3, .search-sidebar h3, .sidebar-outline h3, .widget h3 {
-  font-size: 1.25rem;
-  line-height: 1.875rem;
+  font-size: 1.375rem;
+  line-height: 2.063rem;
 }
 table h3 {
-  font-size: 1.25rem;
-  line-height: 1.875rem;
+  font-size: 1.375rem;
+  line-height: 2.063rem;
 }
 
 h4 {
   margin: 0;
   padding: 11px 0 11px 0;
-  font-size: 1.25rem;
-  line-height: 1.875rem;
+  font-size: 1.312rem;
+  line-height: 1.969rem;
 }
 .person h4, .span3 h4, .span4 h4 {
-  font-size: 1.125rem;
-  line-height: 1.688rem;
+  font-size: 1.187rem;
+  line-height: 1.782rem;
 }
 .sidebar-inline h4, .search-sidebar h4, .sidebar-outline h4, .widget h4 {
-  font-size: 1.125rem;
-  line-height: 1.688rem;
+  font-size: 1.187rem;
+  line-height: 1.782rem;
 }
 table h4 {
-  font-size: 1.125rem;
-  line-height: 1.688rem;
+  font-size: 1.187rem;
+  line-height: 1.782rem;
 }
 
 h5 {
   margin: 0;
   padding: 11px 0 11px 0;
-  font-size: 1.125rem;
-  line-height: 1.688rem;
+  font-size: 1.187rem;
+  line-height: 1.782rem;
 }
 .sidebar-inline h5, .search-sidebar h5, .sidebar-outline h5, .widget h5 {
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: 1.062rem;
+  line-height: 1.594rem;
 }
 table h5 {
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: 1.062rem;
+  line-height: 1.594rem;
 }
 
 h6 {
+  font-size: 1.125rem;
+  line-height: 1.688rem;
+}
+.sidebar-inline h6, .search-sidebar h6, .sidebar-outline h6, .widget h6 {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.sidebar-inline h6, .search-sidebar h6, .sidebar-outline h6, .widget h6 {
-  font-size: 0.875rem;
-  line-height: 1.313rem;
-}
 table h6 {
-  font-size: 0.875rem;
-  line-height: 1.313rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 @media (max-width: 480px) {
@@ -4896,23 +4896,6 @@ table h6 {
     padding-bottom: 0px;
   }
 }
-/*
-@media (max-width: $breakMD) {
-    h1, h2, h3, h4, h5, h6, p {
-		margin-left: 15px;
-		margin-right: 15px;
-
-		#footer &, 
-		#wp-content-wrap &, 
-		#content .container & {
-		    margin-left: 0px;
-		    margin-right: 0px;
-		}
-
-   }
-
-}
-*/
 /*-----------------------------------------------------------------------------------*/
 /* Code und Preformated
 /*-----------------------------------------------------------------------------------*/
@@ -5015,8 +4998,8 @@ p.lead-in {
 
 p.presentationtitle {
   font-weight: bold;
-  font-size: 1.75rem;
-  line-height: 2.625rem;
+  font-size: 2.312rem;
+  line-height: 3.469rem;
   margin: 20px 0 20px 0;
 }
 
@@ -5550,8 +5533,8 @@ form {
 form legend {
   margin: 0;
   padding: 0 0 11px 0;
-  font-size: 1.375rem;
-  line-height: 2.063rem;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
   color: var(--color-primary-basis);
   font-weight: bold;
 }
@@ -5584,8 +5567,8 @@ label {
 
 input[type=text]:focus,
 textarea:focus {
-  box-shadow: 0 0 5px #005287;
-  border: 1px solid #005287;
+  box-shadow: 0 0 5px #04316A;
+  border: 1px solid #04316A;
 }
 
 input[type=submit] {
@@ -5702,7 +5685,7 @@ table th {
   text-align: left;
 }
 table th h1, table th h2, table th h3, table th h4, table th h5, table th h6 {
-  color: #005287;
+  color: #004A9F;
 }
 table.sorttable th.header {
   cursor: pointer;
@@ -5868,6 +5851,14 @@ cite {
 }
 cite.text {
   color: inherit;
+}
+#content .sidebar-inline cite {
+  font-size: 0.875rem;
+  line-height: 1.313rem;
+}
+#content .sidebar-inline cite p {
+  font-size: 0.875rem;
+  line-height: 1.313rem;
 }
 
 acronym[title],
