--- a/src/sass/elements/_headlines.scss
+++ b/src/sass/elements/_headlines.scss
@@ -2,14 +2,14 @@
 /* Headlines
 /*-----------------------------------------------------------------------------------*/
 
-
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
+    margin: 1.5rem 0 1rem 0;
+	font-family: inherit;
 	color: var(--color-content-headlines);
 	font-weight: bold;
 	
@@ -17,7 +17,7 @@ h6 {
 	    font-style: normal;
 	}
 	&.widget-title {
-	    padding-top: 0;			
+	    margin-top: 0;			
 	}
 }
 
@@ -63,17 +63,14 @@ h1 {
 
 h2 {
 	@include px2rem($font-size-h2, $font-size-base, $font-size-h2 * 1.3);
-	margin: 0;
-	padding: 22px 0;
-	
 	
 	.sidebar-outline &, 
 	.widget & {
-	    padding-bottom: 11px;
+	    margin-bottom: 11px;
 	}
 		
 	.search-sidebar & {
-	    padding-top: 8px;
+	    margin-top: 8px;
 	}
 	
 	
@@ -84,9 +81,9 @@ h2 {
 
 	
 	&.subtitle {
-		padding: 0 0 22px 15px;
+		margin: 0 0 22px 15px;
 		@media (min-width: $screen-sm) {
-		    padding-left: 0;
+		    margin-left: 0;
 		}
 	}
 	
@@ -97,7 +94,7 @@ h2 {
 	}
 	
 	.search & {
-		padding-top: 4px;
+		margin-top: 4px;
 	}
 	
 	&.widget-title,
@@ -105,6 +102,7 @@ h2 {
 	.search-sidebar &,
 	.sidebar-outline &, 
 	.widget & {
+	    
 	    @include px2rem($font-size-h2-sidebar);
 	}
 	table & {
@@ -216,20 +214,4 @@ h6 {
     }
 }
 
-/*
-@media (max-width: $breakMD) {
-    h1, h2, h3, h4, h5, h6, p {
-		margin-left: 15px;
-		margin-right: 15px;
-		
-		#footer &, 
-		#wp-content-wrap &, 
-		#content .container & {
-		    margin-left: 0px;
-		    margin-right: 0px;
-		}
-	
-   }
 
-}
-*/
