--- a/src/sass/structure/widgets/_sidebar.scss
+++ b/src/sass/structure/widgets/_sidebar.scss
@@ -22,7 +22,7 @@
                 
                 @media (min-width: $screen-md) {
                     h2:first-child {
-                        padding-top: 0;
+                        margin-top: 0;
                     }
                 }
 	}
