--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -5968,6 +5968,12 @@ img.aligncenter {
   margin: 0 auto 10px auto;
 }
 
+svg {
+  max-width: 100%;
+  max-height: 100%;
+  fill: var(--color-primary-basis);
+}
+
 main img {
   box-shadow: none;
 }
